--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+# Node modules
 node_modules/
+
+# Environment variables
 .env
-uploads/
-*.log
-.DS_Store
-.vscode/
-.idea/
+.env.local
+.env.*.local
+
+# Build outputs
 dist/
 build/
 .gemini/
